[package]
name = "playground"
version = "0.1.0"
edition = "2021"


[dependencies]
async-task = "4.4.0"
futures-lite = "1.12.0"
flume = "0.11.0"

# dependencies below are for integrating our runtime with hyper
hyper = { version = "0.14.26", features = [
    "http1",
    "http2",
    "client",
    "runtime",
] }
smol = "1.3.0"
anyhow = "1.0.70"
async-native-tls = "0.5.0"
http = "0.2.9"
tokio = "1.14.0"
